Upgrade to 1.5.6.